--- a/.gitignore
+++ b/.gitignore
@@ -11,13 +11,19 @@
 .mtj.tmp/
 
 # Package Files #
-*.jar
 *.war
 *.nar
+*.settings
 *.ear
 *.zip
 *.tar.gz
 *.rar
+*.project
+*.classpath
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
+/.gradle/
+/.settings/
+/build/
+/bin/
